# pelican-gpu

./: README.txt
doc/: requirements.txt  requrements.txt
src/: CMakeLists.txt  modules.cmake
src/cmake/FindCUDA/.svn/: all-wcprops  entries
src/cudaWrapper/: CMakeLists.txt  CudaWrapper.cu  CudaWrapper.h
src/lib/: AbstractCudaModule.h  AbstractCudaPipeline.h  CMakeLists.txt  CudaDataBlob.h
src/lib/src/: AbstractCudaModule.cpp  AbstractCudaPipeline.cpp  CudaDataBlob.cpp
tools/: class
